--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <section class="card-section">
       <h2 id="typing-text"></h2>
       <div class="card-container">
-        <a href="https://script.google.com/macros/s/AKfycbxPE-WD7sJygXHpyR747-Ws-4yBMPB46X734guWTsvt42euzZukpTNyx_DeXesCVqZSPg/exec"
+        <a href="http://mekanikpintar.com/"
           class="card-link" target="_blank">
           <div class="card">
             <i class="ri-lightbulb-line icon"></i>
@@ -562,5 +562,6 @@
     });
   </script>
 </body>
+
 
 </html>
